--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>
-    Minimal</title>
+  <title>Minimal</title>
   <meta name="application-name" content="Minimal" />
   <meta name="description" content="HTML CSS Web Template" />
   <meta name="author" content="Taha Ghazi" />
